--- a/pocketbase-helm/templates/pvc.yaml
+++ b/pocketbase-helm/templates/pvc.yaml
@@ -1,11 +1,10 @@
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: pocketbase-pvc
-  namespace: pocketbase
+  name: {{ include "pocketbase-helm.fullname" . }}-pvc
 spec:
   accessModes:
     - ReadWriteOnce
   resources:
     requests:
-      storage: 2Gi
+      storage: {{ .Values.persistence.storage }}
