--- a/pocketbase-helm/templates/deployment.yaml
+++ b/pocketbase-helm/templates/deployment.yaml
@@ -18,8 +18,9 @@ spec:
         - name: {{ .Chart.Name }}
           image: "{{ .Values.image.repository }}:{{ .Values.image.tag | default .Chart.AppVersion }}"
           imagePullPolicy: {{ .Values.image.pullPolicy }}
-          {{- if or .Values.flags.encryptionEnv }}
-          args: ["--encryptionEnv=PB_ENCRYPTION_KEY"]
+          {{- if .Values.flags.encryptionEnv }}
+          command: ["/pocketbase/pocketbase"]
+          args: ["serve", "--encryptionEnv=PB_ENCRYPTION_KEY"]
           env:
             - name: PB_ENCRYPTION_KEY
               value: {{ .Values.flags.encryptionEnv | quote }}
