--- a/pocketbase-helm/templates/service.yaml
+++ b/pocketbase-helm/templates/service.yaml
@@ -8,6 +8,6 @@ spec:
   type: {{ .Values.service.type }}
   ports:
     - port: {{ .Values.service.port }}
-      targetPort: http
+      targetPort: 8090
       protocol: TCP
-      name: http
+      name: pocketbase-port
