--- a/pocketbase-helm/templates/deployment.yaml
+++ b/pocketbase-helm/templates/deployment.yaml
@@ -14,6 +14,10 @@ spec:
       labels:
         app: {{ include "pocketbase-helm.fullname" . }}
     spec:
+      initContainers:
+        - name: {{ .Chart.Name }}-upgrader
+          image: "{{ .Values.image.repository }}:{{ .Values.image.tag | default .Chart.AppVersion }}"
+
       containers:
         - name: {{ .Chart.Name }}
           image: "{{ .Values.image.repository }}:{{ .Values.image.tag | default .Chart.AppVersion }}"
